# ChangeLog for games-puzzle/colorcode
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-puzzle/colorcode/ChangeLog,v 1.5 2010/05/20 19:37:55 phajdan.jr Exp $

  20 May 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  colorcode-0.6.1.ebuild:
  x86 stable wrt bug #318883

*colorcode-0.6.1 (07 Apr 2010)

  07 Apr 2010; Tristan Heaven <nyhm@gentoo.org> +colorcode-0.6.1.ebuild:
  Version bump

*colorcode-0.6.0 (14 Feb 2010)

  14 Feb 2010; Samuli Suominen <ssuominen@gentoo.org>
  +colorcode-0.6.0.ebuild:
  Version bump.

  02 Dec 2009; Markus Meier <maekke@gentoo.org> colorcode-0.5.5.ebuild:
  amd64/x86 stable, bug #295281

*colorcode-0.5.5 (31 Oct 2009)

  31 Oct 2009; Michael Sterrett <mr_bones_@gentoo.org>
  +colorcode-0.5.5.ebuild, +metadata.xml:
  Initial commit - ebuild submitted by ssuominen
