@@ -1,6 +1,6 @@
 # Copyright 1999-2010 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/games-puzzle/colorcode/colorcode-0.6.1.ebuild,v 1.2 2010/05/20 19:37:55 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-puzzle/colorcode/colorcode-0.6.1.ebuild,v 1.3 2010/05/20 19:47:45 ssuominen Exp $
 
 EAPI=2
 inherit eutils qt4-r2 games
@@ -12,7 +12,7 @@ SRC_URI="http://${PN}.laebisch.com/download/${MY_PN}-${PV}.tar.gz"
 
 LICENSE="GPL-3"
 SLOT="0"
-KEYWORDS="~amd64 x86"
+KEYWORDS="amd64 x86"
 IUSE=""
 
 DEPEND="x11-libs/qt-gui:4"
